cargo-features = [ "workspace-inheritance" ]

[workspace]

members = [
    "plugins/asset/crates/model",
    "plugins/asset/crates/plugin",
    "deployment"
]
resolver = "2"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/inexorgame/inexor-rgf-plugins-game"
homepage = "https://inexorgame.github.io/inexor-rgf-plugins-game/book/"
keywords = ["graph", "reactive", "control-flow", "inexor"]

[workspace.dependencies]
async-std = "1.12"
async-trait = "0.1"
dashmap = "5.4"
default-test = "0.1"
git2 = "0.18"
http = "0.2"
json5 = "0.4"
lazy_static = "1.4"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = [ "console_appender", "file_appender", "toml_format" ]}
random-string = "1.0"
rust-embed = { version = "8.0", features = ["debug-embed", "compression"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
springtime-di = { version = "1.0", default-features = false, features = [ "threadsafe", "derive" ] }
springtime-di-derive = "0.3"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.2", features = [ "serde", "v4", "v5" ] }

### Prefer git over crates.io for development

#inexor-rgf-behaviour = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-behaviour-api = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-config-model = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-graph = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-model-runtime = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-plugin-api = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-plugin-derive = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-reactive = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-reactive-api = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-rt-api = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }
#inexor-rgf-test-utils = { version = "0.10.0", git = "https://github.com/inexorgame/inexor-rgf-application.git", branch = "feature/0.10.0/refactoring" }

### Prefer local over git for local development

inexor-rgf-behaviour-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/api" }
inexor-rgf-behaviour-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/impl" }
inexor-rgf-behaviour-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/service/api" }
inexor-rgf-config-model = { version = "0.10.0", path = "../inexor-rgf/crates/config/model" }
inexor-rgf-graph = { version = "0.10.0", path = "../inexor-rgf/crates/graph" }
inexor-rgf-model-runtime = { version = "0.10.0", path = "../inexor-rgf/crates/model/runtime" }
inexor-rgf-plugin-api = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/api" }
inexor-rgf-plugin-derive = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/derive" }
inexor-rgf-reactive-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/api" }
inexor-rgf-reactive-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/impl" }
inexor-rgf-reactive-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/api", features = [ "derive" ] }
inexor-rgf-reactive-service-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/impl" }
inexor-rgf-type-system-api = { version = "0.10.0", path = "../inexor-rgf/crates/type-system/api", features = [ "json5", "toml" ] }
inexor-rgf-lifecycle = { version = "0.10.0", path = "../inexor-rgf/crates/lifecycle" }
inexor-rgf-test-utils = { version = "0.10.0", path = "../inexor-rgf/crates/test-utils" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
