[package]
name = "inexor-rgf-model-asset"
description = "Data model for the asset management"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }

inexor-rgf-graph = { workspace = true }

[lib]
crate-type = ["lib"]
